# prm

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  justfile  pyproject.toml
.claude/commands/: prime.md
brainstorms/: 2026-06-15-prm-v0.2-relationships-schema.md
cli/: README.md  __init__.py  __main__.py  backup.py  config.py  identity.py  ingest.py  jcard.py  normalize.py  prm_import.py  provenance.py  report.py  vcard_writer.py
cli/parsers/: __init__.py  base.py  csv.py  facebook.py  takeout.py  vcard.py
core/: __init__.py  access_log.py  apply.py  audit.py  build_label.py  candidates.py  diag.py  disclosure.py  lock.py  media.py  private_db.py  projection.py  proposals.py  relationships_db.py  schema.py  shared_db.py  snapshots.py  suggest.py
core/schema/: private.sql  relationships.sql  shared.sql
daemon/: __init__.py  server.py
demo/: manifest.json
design/: bulk-approve-mockup.html  workspace-mockup.html
docs/: Architecture.md  prm-feature-spec.md  roadmap.md  users-guide.md
docs/conformance/: evaluate-report.json  report.md
docs/design-notes/: README.md  ai-writes-and-gathered-data.md  bulk-merge-decisions.md  contact-edit-override-model.md  contact-images.md  dedupe-design.md  local-daemon-trust-surface.md  mcp-cannot-identify-the-consuming-llm.md
docs/explainers/: ai-reads-and-writes-walkthrough.md  how-prm-data-works.md
docs/reference/: README.md  source_validation_status.md
mcp_servers/: README.md  __init__.py  claude_config.py  consent.py  dedup_ops.py  install.py  private_data_ops.py  requirements.txt  shared_data_ops.py  tools.py
mcp_servers/prompts/: dedup.md
plans/: desktop-app-and-install.md  ex-cloud-llm-workspace-handler.md  external-access-visibility.md  mcp-ex-h7-consent-handshake.md  r11-append-only-tier.md  v0.1-implementation-plan.md  v0.2-implementation-plan.md  workspace-import-export.md
prompts/: dedup.md
scripts/: access_log.py  conformance_lib.py  conformance_report.py  evaluate_report.py  floor_check.py  loopback_surface_lint.py
tests/conformance/: test_attestation_has_evidence.py
tests/db/: test_private_db_version.py  test_relationships_db_version.py  test_shared_db.py
tests/e2e/: test_dedup_flow.py  test_disclosure_flow.py  test_export_roundtrip.py
tests/fixtures/: README.md
tests/unit/: test_access_log.py  test_ai_write_tiers.py  test_apply.py  test_backup.py  test_build_label.py  test_candidates.py  test_cli_app.py  test_cli_ingest.py  test_config.py  test_contact_edit.py  test_csv_parser.py  test_daemon_diag.py  (+37 more)
workspace/: app.js  index.html  styles.css
(+50 files in other folders)
