[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prm"
version = "0.1.0.dev0"
description = "Personal Relationship Manager — a local-only PNA reference design (v0.1 ingestor)"
requires-python = ">=3.10"
# Runtime deps are deliberately tiny (see plans/v0.1-implementation-plan.md §5):
#   vobjectx — the maintained fork of vobject; used only as the vCard *lexer* (line folding,
#   itemN grouping, real-world quirks). The older `vobject` is API-compatible and is accepted as a
#   fallback by the parser, so the package runs today on either.
dependencies = [
    "vobjectx>=0.5; python_version >= '3.10'",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Optional desktop shell for `prm app` (and `just install`/`just app`). Kept out of the core runtime
# deps so the package still installs tiny-deps; pywebview uses the OS-native webview (WKWebView /
# WebView2 / WebKitGTK) — no bundled Chromium. See plans/desktop-app-and-install.md.
app = ["pywebview>=5"]

[project.scripts]
prm = "cli.prm_import:main"

[tool.setuptools]
# `daemon` serves the read-only workspace (M2). Its static assets live in the source tree under
# `workspace/` and are resolved relative to it — v0.1 is run from source / editable install (the
# build-from-source distribution posture; no wheel installer yet — see roadmap / issue #8).
packages = ["cli", "cli.parsers", "core", "daemon"]

[tool.setuptools.package-data]
core = ["schema/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
